# utils

./: Cargo.toml  LICENSE  README.md
lib/: change_mode.rs  change_ownership.rs  co.rs  concatenate.rs  copy.rs  cp.rs  create_directory.rs  create_file.rs  create_link.rs  current_directory.rs  duplicate_file.rs  env.rs  error.rs  file_system.rs  ls.rs  mod.rs  mv.rs  pwd.rs  read.rs  remove_directory.rs  remove_file.rs  rename_file.rs  show.rs  show_directory.rs  show_env.rs  show_file.rs  stat.rs  tests.rs  touch.rs
lib/fs/: file.rs  kind.rs  mod.rs  mode.rs  permissions.rs  size.rs
lib/macos/: trash.rs
