[package]
name = "utils"
version = "0.0.0"
edition = "2021"

[lib]
name = "lib"
path = "lib/mod.rs"

[[bin]]
name = "pwd"
path = "bin/pwd.rs"

[[bin]]
name = "cp"
path = "bin/cp.rs"

[[bin]]
name = "ls"
path = "bin/ls.rs"

[[bin]]
name = "mkdir"
path = "bin/mkdir.rs"

[[bin]]
name = "mv"
path = "bin/mv.rs"

[[bin]]
name = "rm"
path = "bin/rm.rs"

[[bin]]
name = "rmdir"
path = "bin/rmdir.rs"

[[bin]]
name = "stat"
path = "bin/stat.rs"

[[bin]]
name = "touch"
path = "bin/touch.rs"

[dependencies]
uzers = "0.12.0"
