[package]
name = "utils"
version = "0.0.0"
edition = "2021"

[lib]
name = "lib"
path = "lib/mod.rs"

[[bin]]
name = "pwd"
path = "bin/pwd.rs"

[[bin]]
name = "env"
path = "bin/env.rs"

[[bin]]
name = "cp"
path = "bin/cp.rs"

[[bin]]
name = "cat"
path = "bin/cat.rs"

[[bin]]
name = "cm"
path = "bin/cm.rs"

[[bin]]
name = "co"
path = "bin/co.rs"

[[bin]]
name = "ls"
path = "bin/ls.rs"

[[bin]]
name = "ln"
path = "bin/ln.rs"

[[bin]]
name = "mkdir"
path = "bin/mkdir.rs"

[[bin]]
name = "mv"
path = "bin/mv.rs"

[[bin]]
name = "rm"
path = "bin/rm.rs"

[[bin]]
name = "rmdir"
path = "bin/rmdir.rs"

[[bin]]
name = "stat"
path = "bin/stat.rs"

[[bin]]
name = "touch"
path = "bin/touch.rs"

[[bin]]
name = "trash"
path = "bin/trash.rs"

[dependencies]
libc = "0.2.155"
uzers = "0.12.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", features = [
  "NSError",
  "NSFileManager",
  "NSString",
  "NSURL",
] }
